--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,29 @@
-
-
-.navbar{
-  background-color: whitesmoke;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0% 3%;
-  height: 50px;
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-.navbar2{
-  background-color: whitesmoke;
+.App {
+text-align: center;
+align-items: center;
+ background-image:linear-gradient(to bottom right, cyan, yellow)
+/* display: flex; */
+}
+
+.App_container{ 
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 50px;
-  gap: 5px;
 }
 
-.main_container{
+.card_add_skill{
   background-color: whitesmoke;
-  /* display: flex; */
+  border: 3px solid black;
+  margin: 1%;
+  padding: 1%;
+  width: 60%;
 }
 
 .cool_container{
@@ -29,89 +32,87 @@
   flex-wrap: wrap;
 }
 
-.board{
-  background-color: lightpink;
-  width: 30%;
+.en_rojo{
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+
+}
+
+.main_container{
+  background-color: whitesmoke;
+  /* display: flex; */
+}
+
+.navbar{
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 0% 3%;
+  height: 50px;
+  color: whitesmoke ;
+  font-style: italic;
+
+}
+
+.navbar2{
+  background-color: black;
   display: flex;
-  flex-direction: column;
-  padding: 0.5%;
-  gap: 0.5%;
-  justify-content: space-around;
-  margin: 1%;
-}
-
-.card{
-  background-color: lightcyan;
-  width: 25%;
-  padding: 0.5%;
-  margin: 1%;
-
-}
-
-.card-body{
-  /* background-color: red; */
-  padding: 1% 0%;
-  margin: 1% -2px;
-}
-
-.card_bottom{
-  /* background-color: yellow; */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+/*   height: 50px;
+  */  
+  gap: 25px;
+  color: whitesmoke;
 }
 
-.p_large{
+.nav_button{
+  background-color: black;
+  color: white;
+}
+
+.login_register_form{
   background-color: whitesmoke;
-  font-size: 140%;
-  margin: 0%;
+  border: 3px solid black;
+  margin: 1%;
+  padding: 1%;
+  width: 60%;
+}
+
+.horizontal{
+/*   background-color: yellow;
+  */  
   padding: 0%;
-}
-
-.p_tight{
-  background-color: whitesmoke;
-  margin: 0%;
-  padding: 0%;
-}
-
-.p_pequeno{
-  font-size: 70%;
-}
-
-.form_v{
-  background-color: whitesmoke;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-self: center;
 }
 
-.test_comp{
-  background-color: pink;
+.horizontal_text{
+/*   background-color: yellow;
+  */  
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-.list-table, .list-table th, .list-table td{
-  background-color: whitesmoke;
-  border: 1px solid black;
-}
-
-.list{
-  background-color: gray;
-  display: flex;
-  flex-direction: column;
-}
-
-.comment{
+.log_gen{
   background-color: cyan;
+}
+
+
+/* 
+Login dev está en la Carpeta Login Register */
+.login_dev{
+  background-color: yellow;
+  
 }
 
 .error{
   color: red;
   font-weight: 900;
-}
-
-.App {
-  text-align: center;
 }
 
 .App-logo {
